<resources>
    <string name="app_name">PeraAppNew</string>
    <string name="peraapp">PeraApp</string>
    <string name="description_start">Inicia una nueva aventura con PeraApp y descubre una nueva forma de ver el mundo</string>
    <string name="comienza_button">Comienza</string>
    <string name="juanfe">Juanfe</string>
    <string name="registrate">Registrate</string>
    <string name="login_description">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresar_con_google">Ingresar con Google</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="recuperar_tu_contrasena">Recuperar Tu Contraseña</string>
    <string name="descriptionsignup">Registrate para poder disfrutar de esta nueva aventura</string>
    <string name="termconditions">Al utilizar esta aplicación, aceptas nuestros Términos y Condiciones. Consulta los términos completos en nuestro sitio web.</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="e_mail">E-mail</string>
    <string name="telefono">Teléfono</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombreplaceholder">Nombre...</string>
    <string name="apellidosplaceholder">Apellidos...</string>
    <string name="emailplaceholder">Correo electrónico...</string>
    <string name="telefonoplaceholder">Teléfono...</string>
    <string name="contrasenaplaceholder">Contraseña...</string>
    <string name="confirmarcontrasenaplaceholder">Confirmar contraseña...</string>
    <string name="registro">Registro</string>
    <string name="recuperar_contrasena">Recuperar Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="nameuser">Juan Fernando Orjuela Samaca</string>
    <string name="time">20/08/2025 - 4:50 pm</string>
    <string name="lastnameUser">Orjuela Samaca</string>
    <string name="nameuseredit">Juan Fernando</string>
    <string name="emailuseredit">jfernandoorjuela@ucompensar.edu.co</string>
    <string name="phoneedituser">3135032150</string>
    <string name="updatedata">Actualizar datos</string>
    <string name="registerwithgoogle">Registrate</string>
    <string name="editpersonaldata">Editar información personal</string>
    <string name="contrasena_placeholder">Contraseña</string>
    <string name="usuario_placeholder">Usuario</string>
    <string name="op4">Cerrar sesión</string>
    <string name="op3">Configuración</string>
    <string name="op2">Inicio</string>
    <string name="op1">Mi perfil</string>
    <string name="email_placeholder">Email</string>
</resources>