<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    >

    <TextView
        android:id="@+id/passwordlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

    <TextView
        android:id="@+id/confirmpasswordlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_contrase_a"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491" />

    <EditText
        android:id="@+id/passwordsignup"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:padding="12dp"
        android:textSize="11sp"
        android:hint="@string/contrasenaplaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543"
        app:strokeWidth="1dp" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:padding="12dp"
        android:textSize="11sp"
        android:hint="@string/confirmarcontrasenaplaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"
        app:strokeWidth="1dp" />

    <ImageView
        android:id="@+id/Icon"
        android:layout_width="66dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        app:srcCompat="@mipmap/peraapp_foreground" />

    <TextView
        android:id="@+id/perapp_name2"
        android:layout_width="268dp"
        android:layout_height="85dp"
        android:fontFamily="@font/fugaz_one"
        android:text="@string/registro"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="188dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/white"
        android:text="@string/registrate"
        android:textColor="@color/darkBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/buttongoogle"
        android:layout_width="187dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/white"
        android:text="@string/registerwithgoogle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:icon="@drawable/googleicon"
        app:iconSize="20dp"
        app:iconTint="@android:color/transparent"
        app:iconTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        app:strokeWidth="1dp" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="11sp"
        android:hint="@string/nombreplaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296"
        app:strokeWidth="1dp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="11sp"
        android:hint="@string/apellidosplaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"
        app:strokeWidth="1dp" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textSize="11sp"
        android:hint="@string/emailplaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/telefonoplaceholder"
        android:padding="12dp"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <CheckBox
        android:id="@+id/termconditions"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:text="@string/termconditions"
        android:textAlignment="viewStart"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <TextView
        android:id="@+id/descriptionsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionsignup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <TextView
        android:id="@+id/lasnamelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <TextView
        android:id="@+id/emaillabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/telefonolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_fono"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />


</androidx.constraintlayout.widget.ConstraintLayout>