<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/lightBlue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:id="@+id/Icon"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="132dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/peraapp_foreground" />

        <TextView
            android:id="@+id/perapp_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fugaz_one"
            android:text="@string/peraapp"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/Icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/descriptionsignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description_start"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/perapp_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/comienza_button"
            android:textColor="@color/darkBlue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionsignup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/buttonSignup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>